--- a/css/style.css
+++ b/css/style.css
@@ -11,9 +11,21 @@ body{
     ,url(../images/1.jpg);
     background-size: cover;
 }
-
+  #toggle{
+      height:20px;
+      width:20px;
+      border:white;
+      background-color: black;
+      color:white;
+      font-size: 20px;
+      position: absolute;
+      top:1%;
+      right:1%;
+      display: none;
+      cursor: pointer;
+  }
  .wd{
-     position: fixed;
+    position: fixed;
    border:1px solid white;  
    width:30%;
    height:100%;
@@ -89,8 +101,7 @@ body{
     }
     .box ul{
       margin:0 13%;
-      /* position: sticky;
-      top:0%; */
+     
     }
     .box ul li{
         width:120px;
@@ -111,43 +122,39 @@ body{
     .box ul li a:hover{
        color:white;
     }
-
-    .box .menu h2, .box .photos h2{
+   
+    .box .menu h2, .box .photos h2,.box .online h2, .box .contact-us h2{
         text-align:center;
         margin: 4% auto;
         font-size: 200%;
 
     }
-
+    
     .box .photos img{
         height: 24.5%;
         width: 24.5%;   
     }
     
-    /*-------- Order onile css ------------*/
+    /*-------- Order online css ------------*/
     .box .online{
-        margin-top: 5%;
-        margin-bottom: 5%;
-        height: 60%;
-        
-        
+        /* width: 100%;      
+        height: 80%;  */
     }
-    .box .online h2{
-       text-align: center;
-       font-size: 200%;
-       margin-bottom:5%;
-    }
+    
+    
+    
     .box .online .box1, .box .online .box2{
         width:30%;
         border:1px solid white;
-        height:100%;
+        height:60%;
         float: left;
         
     }
     .box .online .box2{
         width:70%;
+        height: 60%;
         padding:2%;
-        overflow-y: scroll;
+        overflow-y:scroll;
         
     }
     
@@ -250,21 +257,110 @@ body{
 
     /* css for contact us */
 
-    body .box .contact{
-    position: relative;
-    top:10%;
+    .box .contact-us p{      
+    font-size: 150%;
     }
 
-    .box .contact h2{
-        text-align:center;
-        padding-top: 5%;
-    }
 
+    
     .box footer{
-        
+        margin: 4% 0% 0% 0%;
         width:100%;
         border:1px solid white;
         background:black;
         text-align: center;
         padding: 2%;
+    }
+    
+
+    @media all and (max-width:500px){
+        
+        body{
+            background-attachment: fixed;
+
+        }
+        .box .photos img{
+            height: 24.5%;
+            width: 49%;   
+        }
+        #toggle{
+            display: block;
+            font-size: 30px;
+            color:white;
+            right:5%;
+            position:sticky;
+            top:0;
+            left: 95%;
+        }
+        #toggle i{
+            color:white;
+        }
+        body .wd{
+            
+            width:100%;
+            height:100%;
+              
+            padding: 2.5%;
+            font-size: 15px;
+            position: relative;
+            top:0%;
+        }
+        .wd .name{
+            font-size:250%;
+            word-spacing:7px;
+            padding-bottom: 5%;
+            text-shadow: 2px 3px 5px blue;
+            text-align:center;
+        }
+        .box{
+            position: relative;
+            width:100%;
+            float:unset;
+            border:1px solid none;
+            padding:1%;
+            
+            }
+
+
+        .box nav{
+            width: 100%;
+            height:40%;
+            position: relative;
+            display: none;
+        }
+        .box .online{
+           
+            font-size: 12px;
+        }
+        .box .online .box1{
+            height: 60%;
+        }
+        .box .online .box1 ul li{
+            font-size:16px;
+        }
+        .online .box2 p input[type="search"]{
+            float:right;
+            width:40%;
+            height:10%;
+            font-size:8px;
+            text-align:center;
+            border-radius:5px;
+            border:none;
+            outline:none;
+    
+        }
+        .box2 .items input[type="submit"]{
+            padding:1%;
+            width:50px;
+            font-size:16px;
+            position:relative;
+            left:80%;
+            margin-bottom: 2%;
+            border-radius: 10px;
+            border:none;
+           
+        }
+
+        
+
     }
